# buddies

./: AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml
src/: identity.rs  main.rs  memory.rs  node.rs  protocol.rs  room.rs  server.rs  skill.rs  storage.rs  ticket.rs
