[package]
name = "smemo"
version = "0.1.0"
edition = "2024"
description = "Shared Memory & Skills MCP Server over P2P"
license = "AGPL-3.0-or-later"

[dependencies]
# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }

# P2P networking
iroh = "0.96"
iroh-gossip = "0.96"
n0-future = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# Schema generation — must match rmcp's schemars v1
schemars = "1"

# Local storage
redb = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
data-encoding = "2"
rand = "0.9"
dirs = "6"
whoami = "1"
axum = "0.8"
